[gd_scene load_steps=2 format=3 uid="uid://dqp5vh8j3xn8w"]

[ext_resource type="Script" path="res://touch_controls.gd" id="1_touch"]

[node name="TouchControls" type="CanvasLayer"]
script = ExtResource("1_touch")

[node name="DPadContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -350.0
offset_right = 350.0
offset_bottom = -50.0
grow_vertical = 0

[node name="ButtonLeft" type="TouchScreenButton" parent="DPadContainer"]
position = Vector2(0, 100)
scale = Vector2(2.5, 2.5)
action = "ui_left"
visibility_mode = 1

[node name="ColorRect" type="ColorRect" parent="DPadContainer/ButtonLeft"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="Label" type="Label" parent="DPadContainer/ButtonLeft"]
offset_left = 8.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 34.0
text = "◄"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonRight" type="TouchScreenButton" parent="DPadContainer"]
position = Vector2(200, 100)
scale = Vector2(2.5, 2.5)
action = "ui_right"
visibility_mode = 1

[node name="ColorRect" type="ColorRect" parent="DPadContainer/ButtonRight"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="Label" type="Label" parent="DPadContainer/ButtonRight"]
offset_left = 8.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 34.0
text = "►"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonUp" type="TouchScreenButton" parent="DPadContainer"]
position = Vector2(100, 0)
scale = Vector2(2.5, 2.5)
action = "ui_up"
visibility_mode = 1

[node name="ColorRect" type="ColorRect" parent="DPadContainer/ButtonUp"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="Label" type="Label" parent="DPadContainer/ButtonUp"]
offset_left = 8.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 34.0
text = "▲"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonDown" type="TouchScreenButton" parent="DPadContainer"]
position = Vector2(100, 200)
scale = Vector2(2.5, 2.5)
action = "ui_down"
visibility_mode = 1

[node name="ColorRect" type="ColorRect" parent="DPadContainer/ButtonDown"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="Label" type="Label" parent="DPadContainer/ButtonDown"]
offset_left = 8.0
offset_top = 8.0
offset_right = 32.0
offset_bottom = 34.0
text = "▼"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -350.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0

[node name="ButtonJump" type="TouchScreenButton" parent="ActionButtons"]
position = Vector2(50, 50)
scale = Vector2(3, 3)
action = "ui_accept"
visibility_mode = 1

[node name="ColorRect" type="ColorRect" parent="ActionButtons/ButtonJump"]
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.2, 0.6, 0.2, 0.6)

[node name="Label" type="Label" parent="ActionButtons/ButtonJump"]
offset_right = 50.0
offset_bottom = 50.0
text = "JUMP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonShoot" type="TouchScreenButton" parent="ActionButtons"]
position = Vector2(50, 175)
scale = Vector2(3, 3)
action = "shoot"
visibility_mode = 1

[node name="ColorRect" type="ColorRect" parent="ActionButtons/ButtonShoot"]
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.8, 0.2, 0.2, 0.6)

[node name="Label" type="Label" parent="ActionButtons/ButtonShoot"]
offset_right = 50.0
offset_bottom = 50.0
text = "FIRE"
horizontal_alignment = 1
vertical_alignment = 1
